# cryfttee

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
config/: cryftee.example.toml  cryfttee.example.json  cryfttee.example.toml  trust.toml
cryftee-runtime/: Cargo.toml
cryftee-runtime/src/: lib.rs  main.rs
cryftee-runtime/src/config/: mod.rs  types.rs
cryftee-runtime/src/http/: api.rs  kiosk.rs  mod.rs
cryftee-runtime/src/runtime/: dispatch.rs  loader.rs  mod.rs  registry.rs
cryftee-runtime/src/signing/: blockchain_state.rs  mod.rs
cryftee-runtime/src/storage/: index.rs  mod.rs
cryftee-runtime/src/uds/: mod.rs  service.rs
cryftee-runtime/src/wasm_api/: mod.rs  staking.rs
cryfttee-runtime/: Cargo.toml
cryfttee-runtime/src/: lib.rs  limits.rs  main.rs
cryfttee-runtime/src/config/: mod.rs  types.rs
cryfttee-runtime/src/http/: api.rs  kiosk.rs  mod.rs
cryfttee-runtime/src/runtime/: dispatch.rs  loader.rs  mod.rs  registry.rs
cryfttee-runtime/src/signing/: blockchain_state.rs  github_verify.rs  mod.rs
cryfttee-runtime/src/storage/: index.rs  mod.rs
cryfttee-runtime/src/uds/: mod.rs  service.rs
cryfttee-runtime/src/wasm_api/: mod.rs  staking.rs
docs/: CRYFTGO_INTEGRATION_CHECKLIST.md  CRYFT_NETWORK_OVERVIEW.md  ENVIRONMENT_VARIABLES.md  POWER_OF_TEN_COMPLIANCE.md  cryftgo-attestation-prompt.md  cryftgo-cryfttee-integration-prompt.md
modules/: manifest.json
modules/bls_tls_signer_v1/: Cargo.toml  README.md  module.json  module.wasm
modules/bls_tls_signer_v1/gui/: index.html
modules/bls_tls_signer_v1/src/: lib.rs
modules/debug_v1/: Cargo.toml  README.md  module.json  module.wasm
modules/debug_v1/gui/: index.html
modules/debug_v1/src/: lib.rs
modules/ipfs_v1/: Cargo.toml  README.md  module.json  module.wasm
modules/ipfs_v1/gui/: index.html  styles.css
modules/ipfs_v1/gui/js/: api.js  app.js  config.js  utils.js
modules/ipfs_v1/gui/js/pages/: explore.js  files.js  incentivized.js  ipns.js  peers.js  pins.js  rewards.js  settings.js  status.js  validator.js
modules/ipfs_v1/gui/js/tabs/: add.js  ipns.js  node.js  peers.js  pins.js  settings.js
modules/ipfs_v1/native/: Cargo.toml
modules/ipfs_v1/native/src/: main.rs
modules/ipfs_v1/src/: backend.rs  lib.rs
modules/llm_chat_v1/: Cargo.toml  module.json  module.wasm
modules/llm_chat_v1/gui/: index.html
modules/llm_chat_v1/src/: lib.rs
modules/redeemable_codes_v1/: Cargo.toml  README.md  module.json  module.wasm
modules/redeemable_codes_v1/gui/: index.html  styles.css
modules/redeemable_codes_v1/gui/js/: api.js  app.js
modules/redeemable_codes_v1/src/: lib.rs
scripts/: Deploy-Web3Signer.ps1  build.ps1  build.sh  deploy-keyvault.sh  deploy-web3signer.sh
ui/: app.js  index.html  styles.css
