[package]
name = "cryfttee-runtime"
version = "0.4.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "TEE-style sidecar runtime for WASM modules - BLS/TLS signing, fraud proofs, policy engines"
license = "MIT"
repository = "https://github.com/cryft-labs/cryfttee"
keywords = ["tee", "wasm", "signing", "bls", "staking"]

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["tokio"] }
tokio-rustls = { version = "0.24" }
rustls-pemfile = "2.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
bytes = "1.5"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"

# WASM runtime
wasmtime = { version = "16", features = ["async", "component-model"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
base64 = "0.21"

# CLI and config
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
semver = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# HTTP client for Web3Signer health checks
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "cryfttee"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
