[package]
name = "bls_tls_signer"
version = "2.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "Self-contained BLS/TLS signing WASM module for CryftTEE"

[lib]
crate-type = ["cdylib"]

[dependencies]
# No external dependencies - self-contained module

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
