[package]
name = "ipfs_v1"
version = "1.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "IPFS module for decentralized module distribution - pin/unpin, search, and gateway management"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
