[package]
name = "ipfs_v1"
version = "2.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "Standalone IPFS embedded node module - Full node (default) or Light client, no external daemon required"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
