[package]
name = "llm_chat_v1"
version = "2.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "Self-contained LLM chat interface WASM module for CryftTEE"

[lib]
crate-type = ["cdylib"]

[dependencies]
# No external dependencies - self-contained module

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
