[package]
name = "redeemable_codes_v1"
version = "1.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "On-Chain Managed Redeemable Gift Codes - Dual smart contract system for secure, transparent gift code management"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
