[package]
name = "redeemable_codes_v1"
version = "2.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "Self-contained gift code system - US Patent App 20250139608"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# No external dependencies - self-contained module

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
