[package]
name = "ipfs-node"
version = "1.0.0"
edition = "2021"
authors = ["Cryft Labs"]
description = "Embedded IPFS node for CryftTEE - powered by Iroh"
license = "MIT"

[[bin]]
name = "ipfs-node"
path = "src/main.rs"

[dependencies]
# Iroh - modern IPFS implementation (latest API)
iroh = "0.95"
iroh-blobs = "0.97"
n0-future = "0.1"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# HTTP server for kubo-compatible API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Content type detection
infer = "0.16"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
strip = true
codegen-units = 1
